aplicacion/y.output
   0  $accept : prog $end

   1  prog : ID LLAVEINIC bloque LLAVEFIN
   2       | ID bloque LLAVEFIN
   3       | ID LLAVEINIC bloque
   4       | LLAVEINIC bloque LLAVEFIN
   5       | ID LLAVEINIC bloque LLAVEFIN error

   6  bloque :
   7         | bloque sentencia

   8  bloque_ejecutable : bloque_ejecutable sentencia_ejec PUNTOYCOMA
   9                    | sentencia_ejec PUNTOYCOMA
  10                    | sentencia_ejec
  11                    | bloque_ejecutable sentencia_ejec

  12  tipo : INT

  13  sentencia : declaracion_variable
  14            | declaracion_con_asignacion
  15            | sentencia_ejec PUNTOYCOMA
  16            | sentencia_ejec
  17            | declaracion_funcion

  18  sentencia_ejec : asign_simple
  19                 | asign_multiple
  20                 | bloque_if
  21                 | bloque_for
  22                 | sentencia_print
  23                 | llamada_funcion

  24  declaracion_variable : tipo lista_ids PUNTOYCOMA
  25                       | tipo lista_ids
  26                       | tipo PUNTOYCOMA

  27  lista_ids : ID
  28            | lista_ids COMA ID
  29            | lista_ids COMA error

  30  declaracion_con_asignacion : tipo ID ASIGN expresion PUNTOYCOMA
  31                             | tipo ID ASIGN expresion
  32                             | tipo ID ASIGN error PUNTOYCOMA
  33                             | tipo ID error expresion PUNTOYCOMA
  34                             | tipo error ASIGN expresion PUNTOYCOMA

  35  declaracion_funcion : tipo ID PARENTINIC lista_params_formales PARENTFIN LLAVEINIC bloque return_sent LLAVEFIN
  36                      | declaracion_funcion_err

  37  declaracion_funcion_err : tipo PARENTINIC lista_params_formales PARENTFIN LLAVEINIC bloque LLAVEFIN

  38  lista_params_formales : param_formal
  39                        | lista_params_formales COMA param_formal
  40                        | lista_params_formales COMA error

  41  param_formal : sem_pasaje_opt tipo ID
  42               | sem_pasaje_opt tipo error
  43               | sem_pasaje_opt ID

  44  sem_pasaje_opt :
  45                 | CV

  46  return_sent : RETURN PARENTINIC expresion PARENTFIN PUNTOYCOMA
  47              | RETURN PARENTINIC expresion PARENTFIN
  48              |

  49  asign_simple : var_ref ASIGN expresion

  50  asign_multiple : lista_vars IGUALUNICO lista_ctes
  51                 | IGUALUNICO lista_ctes
  52                 | lista_vars IGUALUNICO error

  53  lista_ctes : cte
  54             | lista_ctes COMA cte
  55             | lista_ctes COMA error
  56             | lista_ctes cte

  57  lista_vars : var_ref
  58             | lista_vars COMA var_ref
  59             | lista_vars COMA error
  60             | lista_vars var_ref

  61  var_ref : ID
  62          | var_ref PUNTO ID

  63  expresion : termino
  64            | expresion MAS termino
  65            | expresion MAS error
  66            | error MAS termino
  67            | expresion MENOS termino
  68            | expresion MENOS error
  69            | error MENOS termino

  70  termino : factor
  71          | termino MUL factor
  72          | termino MUL error
  73          | error MUL factor
  74          | termino DIV factor
  75          | termino DIV error
  76          | error DIV factor

  77  factor : ID
  78         | ID restofunc
  79         | cte

  80  restofunc : PARENTINIC lista_params_reales PARENTFIN

  81  cte : CTEFLOAT
  82      | MENOS CTEFLOAT
  83      | CTEINT
  84      | MENOS CTEINT
  85      | CTESTR

  86  bloque_if : IF PARENTINIC condicion PARENTFIN rama_if ENDIF
  87            | IF PARENTINIC condicion PARENTFIN rama_if ELSE rama_else ENDIF
  88            | bloque_if_error

  89  bloque_if_error : IF condicion PARENTFIN rama_if ENDIF
  90                  | IF PARENTINIC condicion rama_if ENDIF
  91                  | IF condicion rama_if ENDIF
  92                  | IF PARENTINIC condicion PARENTFIN rama_if error
  93                  | IF condicion PARENTFIN rama_if ELSE rama_else ENDIF
  94                  | IF PARENTINIC condicion rama_if ELSE rama_else ENDIF
  95                  | IF condicion rama_if ELSE rama_else ENDIF
  96                  | IF PARENTINIC condicion PARENTFIN rama_if ELSE rama_else error
  97                  | IF rama_if ENDIF
  98                  | IF rama_if ELSE rama_else ENDIF
  99                  | IF PARENTINIC error PARENTFIN rama_if ENDIF
 100                  | IF PARENTINIC error PARENTFIN rama_if ELSE rama_else ENDIF
 101                  | IF PARENTINIC condicion PARENTFIN error
 102                  | IF PARENTINIC condicion PARENTFIN rama_if ELSE error

 103  condicion : expresion op_relacion expresion
 104            | expresion error expresion
 105            | error op_relacion expresion
 106            | expresion op_relacion error

 107  op_relacion : MENOR
 108              | MAYOR
 109              | IGUAL
 110              | DISTINTO
 111              | MENORIGUAL
 112              | MAYORIGUAL

 113  rama_if : sentencia_ejec PUNTOYCOMA
 114          | LLAVEINIC bloque_ejecutable LLAVEFIN
 115          | LLAVEINIC LLAVEFIN

 116  rama_else : sentencia_ejec PUNTOYCOMA
 117            | LLAVEINIC bloque_ejecutable LLAVEFIN
 118            | LLAVEINIC LLAVEFIN

 119  bloque_for : FOR PARENTINIC ID FROM CTEINT TO CTEINT PARENTFIN rama_for
 120             | FOR ID FROM CTEINT TO CTEINT PARENTFIN rama_for
 121             | FOR PARENTINIC FROM CTEINT TO CTEINT PARENTFIN rama_for
 122             | FOR PARENTINIC ID CTEINT TO CTEINT PARENTFIN rama_for
 123             | FOR PARENTINIC ID FROM TO CTEINT PARENTFIN rama_for
 124             | FOR PARENTINIC ID FROM CTEINT CTEINT PARENTFIN rama_for
 125             | FOR PARENTINIC ID FROM CTEINT TO PARENTFIN rama_for
 126             | FOR PARENTINIC ID FROM CTEINT TO CTEINT rama_for
 127             | FOR ID FROM CTEINT TO CTEINT rama_for
 128             | FOR PARENTINIC ID FROM CTEINT TO CTEINT PARENTFIN error

 129  rama_for : sentencia_ejec
 130           | LLAVEINIC bloque_ejecutable LLAVEFIN
 131           | LLAVEINIC LLAVEFIN

 132  sentencia_print : PRINT PARENTINIC expresion PARENTFIN
 133                  | PRINT PARENTINIC error PARENTFIN
 134                  | PRINT expresion PARENTFIN
 135                  | PRINT PARENTINIC expresion

 136  llamada_funcion : ID PARENTINIC lista_params_reales PARENTFIN

 137  lista_params_reales : param_real_map
 138                      | lista_params_reales COMA param_real_map

 139  param_real_map : parametro_real FLECHA ID
 140                 | parametro_real FLECHA error

 141  parametro_real : expresion
 142                 | TRUNC PARENTINIC expresion PARENTFIN
 143                 | TRUNC PARENTINIC expresion
 144                 | TRUNC expresion PARENTFIN
 145                 | TRUNC expresion
 146                 | lambda_expr

 147  lambda_expr : PARENTINIC tipo ID PARENTFIN LLAVEINIC bloque_ejecutable LLAVEFIN PARENTINIC argumento PARENTFIN
 148              | PARENTINIC tipo ID PARENTFIN bloque_ejecutable LLAVEFIN PARENTINIC argumento PARENTFIN
 149              | PARENTINIC tipo ID PARENTFIN LLAVEINIC bloque_ejecutable PARENTINIC argumento PARENTFIN
 150              | PARENTINIC tipo ID PARENTFIN bloque_ejecutable PARENTINIC argumento PARENTFIN

 151  argumento : ID
 152            | cte

state 0
	$accept : . prog $end  (0)

	ID  shift 1
	LLAVEINIC  shift 2
	.  error

	prog  goto 3


state 1
	prog : ID . LLAVEINIC bloque LLAVEFIN  (1)
	prog : ID . bloque LLAVEFIN  (2)
	prog : ID . LLAVEINIC bloque  (3)
	prog : ID . LLAVEINIC bloque LLAVEFIN error  (5)
	bloque : .  (6)

	LLAVEINIC  shift 4
	IF  reduce 6
	PRINT  reduce 6
	INT  reduce 6
	FOR  reduce 6
	ID  reduce 6
	IGUALUNICO  reduce 6
	LLAVEFIN  reduce 6

	bloque  goto 5


state 2
	prog : LLAVEINIC . bloque LLAVEFIN  (4)
	bloque : .  (6)

	.  reduce 6

	bloque  goto 6


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	prog : ID LLAVEINIC . bloque LLAVEFIN  (1)
	prog : ID LLAVEINIC . bloque  (3)
	prog : ID LLAVEINIC . bloque LLAVEFIN error  (5)
	bloque : .  (6)

	.  reduce 6

	bloque  goto 7


state 5
	prog : ID bloque . LLAVEFIN  (2)
	bloque : bloque . sentencia  (7)

	IF  shift 8
	PRINT  shift 9
	INT  shift 10
	FOR  shift 11
	ID  shift 12
	IGUALUNICO  shift 13
	LLAVEFIN  shift 14
	.  error

	sentencia  goto 15
	sentencia_ejec  goto 16
	tipo  goto 17
	declaracion_variable  goto 18
	declaracion_con_asignacion  goto 19
	declaracion_funcion  goto 20
	asign_simple  goto 21
	asign_multiple  goto 22
	bloque_if  goto 23
	bloque_for  goto 24
	sentencia_print  goto 25
	llamada_funcion  goto 26
	declaracion_funcion_err  goto 27
	var_ref  goto 28
	lista_vars  goto 29
	bloque_if_error  goto 30


state 6
	prog : LLAVEINIC bloque . LLAVEFIN  (4)
	bloque : bloque . sentencia  (7)

	IF  shift 8
	PRINT  shift 9
	INT  shift 10
	FOR  shift 11
	ID  shift 12
	IGUALUNICO  shift 13
	LLAVEFIN  shift 31
	.  error

	sentencia  goto 15
	sentencia_ejec  goto 16
	tipo  goto 17
	declaracion_variable  goto 18
	declaracion_con_asignacion  goto 19
	declaracion_funcion  goto 20
	asign_simple  goto 21
	asign_multiple  goto 22
	bloque_if  goto 23
	bloque_for  goto 24
	sentencia_print  goto 25
	llamada_funcion  goto 26
	declaracion_funcion_err  goto 27
	var_ref  goto 28
	lista_vars  goto 29
	bloque_if_error  goto 30


state 7
	prog : ID LLAVEINIC bloque . LLAVEFIN  (1)
	prog : ID LLAVEINIC bloque .  (3)
	prog : ID LLAVEINIC bloque . LLAVEFIN error  (5)
	bloque : bloque . sentencia  (7)

	IF  shift 8
	PRINT  shift 9
	INT  shift 10
	FOR  shift 11
	ID  shift 12
	IGUALUNICO  shift 13
	LLAVEFIN  shift 32
	$end  reduce 3

	sentencia  goto 15
	sentencia_ejec  goto 16
	tipo  goto 17
	declaracion_variable  goto 18
	declaracion_con_asignacion  goto 19
	declaracion_funcion  goto 20
	asign_simple  goto 21
	asign_multiple  goto 22
	bloque_if  goto 23
	bloque_for  goto 24
	sentencia_print  goto 25
	llamada_funcion  goto 26
	declaracion_funcion_err  goto 27
	var_ref  goto 28
	lista_vars  goto 29
	bloque_if_error  goto 30


state 8
	bloque_if : IF . PARENTINIC condicion PARENTFIN rama_if ENDIF  (86)
	bloque_if : IF . PARENTINIC condicion PARENTFIN rama_if ELSE rama_else ENDIF  (87)
	bloque_if_error : IF . condicion PARENTFIN rama_if ENDIF  (89)
	bloque_if_error : IF . PARENTINIC condicion rama_if ENDIF  (90)
	bloque_if_error : IF . condicion rama_if ENDIF  (91)
	bloque_if_error : IF . PARENTINIC condicion PARENTFIN rama_if error  (92)
	bloque_if_error : IF . condicion PARENTFIN rama_if ELSE rama_else ENDIF  (93)
	bloque_if_error : IF . PARENTINIC condicion rama_if ELSE rama_else ENDIF  (94)
	bloque_if_error : IF . condicion rama_if ELSE rama_else ENDIF  (95)
	bloque_if_error : IF . PARENTINIC condicion PARENTFIN rama_if ELSE rama_else error  (96)
	bloque_if_error : IF . rama_if ENDIF  (97)
	bloque_if_error : IF . rama_if ELSE rama_else ENDIF  (98)
	bloque_if_error : IF . PARENTINIC error PARENTFIN rama_if ENDIF  (99)
	bloque_if_error : IF . PARENTINIC error PARENTFIN rama_if ELSE rama_else ENDIF  (100)
	bloque_if_error : IF . PARENTINIC condicion PARENTFIN error  (101)
	bloque_if_error : IF . PARENTINIC condicion PARENTFIN rama_if ELSE error  (102)

	error  shift 33
	IF  shift 8
	PRINT  shift 9
	FOR  shift 11
	ID  shift 34
	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	IGUALUNICO  shift 13
	PARENTINIC  shift 39
	LLAVEINIC  shift 40
	.  error

	sentencia_ejec  goto 41
	asign_simple  goto 21
	asign_multiple  goto 22
	bloque_if  goto 23
	bloque_for  goto 24
	sentencia_print  goto 25
	llamada_funcion  goto 26
	expresion  goto 42
	var_ref  goto 28
	lista_vars  goto 29
	cte  goto 43
	termino  goto 44
	factor  goto 45
	condicion  goto 46
	rama_if  goto 47
	bloque_if_error  goto 30


state 9
	sentencia_print : PRINT . PARENTINIC expresion PARENTFIN  (132)
	sentencia_print : PRINT . PARENTINIC error PARENTFIN  (133)
	sentencia_print : PRINT . expresion PARENTFIN  (134)
	sentencia_print : PRINT . PARENTINIC expresion  (135)

	error  shift 48
	ID  shift 49
	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	PARENTINIC  shift 50
	.  error

	expresion  goto 51
	cte  goto 43
	termino  goto 44
	factor  goto 45


state 10
	tipo : INT .  (12)

	.  reduce 12


state 11
	bloque_for : FOR . PARENTINIC ID FROM CTEINT TO CTEINT PARENTFIN rama_for  (119)
	bloque_for : FOR . ID FROM CTEINT TO CTEINT PARENTFIN rama_for  (120)
	bloque_for : FOR . PARENTINIC FROM CTEINT TO CTEINT PARENTFIN rama_for  (121)
	bloque_for : FOR . PARENTINIC ID CTEINT TO CTEINT PARENTFIN rama_for  (122)
	bloque_for : FOR . PARENTINIC ID FROM TO CTEINT PARENTFIN rama_for  (123)
	bloque_for : FOR . PARENTINIC ID FROM CTEINT CTEINT PARENTFIN rama_for  (124)
	bloque_for : FOR . PARENTINIC ID FROM CTEINT TO PARENTFIN rama_for  (125)
	bloque_for : FOR . PARENTINIC ID FROM CTEINT TO CTEINT rama_for  (126)
	bloque_for : FOR . ID FROM CTEINT TO CTEINT rama_for  (127)
	bloque_for : FOR . PARENTINIC ID FROM CTEINT TO CTEINT PARENTFIN error  (128)

	ID  shift 52
	PARENTINIC  shift 53
	.  error


state 12
	var_ref : ID .  (61)
	llamada_funcion : ID . PARENTINIC lista_params_reales PARENTFIN  (136)

	PARENTINIC  shift 54
	ID  reduce 61
	ASIGN  reduce 61
	IGUALUNICO  reduce 61
	PUNTO  reduce 61
	COMA  reduce 61


state 13
	asign_multiple : IGUALUNICO . lista_ctes  (51)

	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	.  error

	lista_ctes  goto 55
	cte  goto 56


state 14
	prog : ID bloque LLAVEFIN .  (2)

	.  reduce 2


state 15
	bloque : bloque sentencia .  (7)

	.  reduce 7


state 16
	sentencia : sentencia_ejec . PUNTOYCOMA  (15)
	sentencia : sentencia_ejec .  (16)

	PUNTOYCOMA  shift 57
	$end  reduce 16
	IF  reduce 16
	PRINT  reduce 16
	RETURN  reduce 16
	INT  reduce 16
	FOR  reduce 16
	ID  reduce 16
	IGUALUNICO  reduce 16
	LLAVEFIN  reduce 16


state 17
	declaracion_variable : tipo . lista_ids PUNTOYCOMA  (24)
	declaracion_variable : tipo . lista_ids  (25)
	declaracion_variable : tipo . PUNTOYCOMA  (26)
	declaracion_con_asignacion : tipo . ID ASIGN expresion PUNTOYCOMA  (30)
	declaracion_con_asignacion : tipo . ID ASIGN expresion  (31)
	declaracion_con_asignacion : tipo . ID ASIGN error PUNTOYCOMA  (32)
	declaracion_con_asignacion : tipo . ID error expresion PUNTOYCOMA  (33)
	declaracion_con_asignacion : tipo . error ASIGN expresion PUNTOYCOMA  (34)
	declaracion_funcion : tipo . ID PARENTINIC lista_params_formales PARENTFIN LLAVEINIC bloque return_sent LLAVEFIN  (35)
	declaracion_funcion_err : tipo . PARENTINIC lista_params_formales PARENTFIN LLAVEINIC bloque LLAVEFIN  (37)

	error  shift 58
	ID  shift 59
	PUNTOYCOMA  shift 60
	PARENTINIC  shift 61
	.  error

	lista_ids  goto 62


state 18
	sentencia : declaracion_variable .  (13)

	.  reduce 13


state 19
	sentencia : declaracion_con_asignacion .  (14)

	.  reduce 14


state 20
	sentencia : declaracion_funcion .  (17)

	.  reduce 17


state 21
	sentencia_ejec : asign_simple .  (18)

	.  reduce 18


state 22
	sentencia_ejec : asign_multiple .  (19)

	.  reduce 19


state 23
	sentencia_ejec : bloque_if .  (20)

	.  reduce 20


state 24
	sentencia_ejec : bloque_for .  (21)

	.  reduce 21


state 25
	sentencia_ejec : sentencia_print .  (22)

	.  reduce 22


state 26
	sentencia_ejec : llamada_funcion .  (23)

	.  reduce 23


state 27
	declaracion_funcion : declaracion_funcion_err .  (36)

	.  reduce 36


state 28
	asign_simple : var_ref . ASIGN expresion  (49)
	lista_vars : var_ref .  (57)
	var_ref : var_ref . PUNTO ID  (62)

	ASIGN  shift 63
	PUNTO  shift 64
	ID  reduce 57
	IGUALUNICO  reduce 57
	COMA  reduce 57


state 29
	asign_multiple : lista_vars . IGUALUNICO lista_ctes  (50)
	asign_multiple : lista_vars . IGUALUNICO error  (52)
	lista_vars : lista_vars . COMA var_ref  (58)
	lista_vars : lista_vars . COMA error  (59)
	lista_vars : lista_vars . var_ref  (60)

	ID  shift 65
	IGUALUNICO  shift 66
	COMA  shift 67
	.  error

	var_ref  goto 68


state 30
	bloque_if : bloque_if_error .  (88)

	.  reduce 88


state 31
	prog : LLAVEINIC bloque LLAVEFIN .  (4)

	.  reduce 4


state 32
	prog : ID LLAVEINIC bloque LLAVEFIN .  (1)
	prog : ID LLAVEINIC bloque LLAVEFIN . error  (5)

	error  shift 69
	$end  reduce 1


state 33
	expresion : error . MAS termino  (66)
	expresion : error . MENOS termino  (69)
	termino : error . MUL factor  (73)
	termino : error . DIV factor  (76)
	condicion : error . op_relacion expresion  (105)

	IGUAL  shift 70
	DISTINTO  shift 71
	MENORIGUAL  shift 72
	MAYORIGUAL  shift 73
	MAS  shift 74
	MUL  shift 75
	DIV  shift 76
	MENOS  shift 77
	MAYOR  shift 78
	MENOR  shift 79
	.  error

	op_relacion  goto 80


state 34
	var_ref : ID .  (61)
	factor : ID .  (77)
	factor : ID . restofunc  (78)
	llamada_funcion : ID . PARENTINIC lista_params_reales PARENTFIN  (136)

	PARENTINIC  shift 81
	error  reduce 77
	ID  reduce 61
	ASIGN  reduce 61
	IGUAL  reduce 77
	DISTINTO  reduce 77
	MENORIGUAL  reduce 77
	MAYORIGUAL  reduce 77
	MAS  reduce 77
	MUL  reduce 77
	DIV  reduce 77
	MENOS  reduce 77
	IGUALUNICO  reduce 61
	MAYOR  reduce 77
	MENOR  reduce 77
	PUNTO  reduce 61
	COMA  reduce 61

	restofunc  goto 82


state 35
	cte : CTEINT .  (83)

	.  reduce 83


state 36
	cte : CTEFLOAT .  (81)

	.  reduce 81


state 37
	cte : CTESTR .  (85)

	.  reduce 85


state 38
	cte : MENOS . CTEFLOAT  (82)
	cte : MENOS . CTEINT  (84)

	CTEINT  shift 83
	CTEFLOAT  shift 84
	.  error


state 39
	bloque_if : IF PARENTINIC . condicion PARENTFIN rama_if ENDIF  (86)
	bloque_if : IF PARENTINIC . condicion PARENTFIN rama_if ELSE rama_else ENDIF  (87)
	bloque_if_error : IF PARENTINIC . condicion rama_if ENDIF  (90)
	bloque_if_error : IF PARENTINIC . condicion PARENTFIN rama_if error  (92)
	bloque_if_error : IF PARENTINIC . condicion rama_if ELSE rama_else ENDIF  (94)
	bloque_if_error : IF PARENTINIC . condicion PARENTFIN rama_if ELSE rama_else error  (96)
	bloque_if_error : IF PARENTINIC . error PARENTFIN rama_if ENDIF  (99)
	bloque_if_error : IF PARENTINIC . error PARENTFIN rama_if ELSE rama_else ENDIF  (100)
	bloque_if_error : IF PARENTINIC . condicion PARENTFIN error  (101)
	bloque_if_error : IF PARENTINIC . condicion PARENTFIN rama_if ELSE error  (102)

	error  shift 85
	ID  shift 49
	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	.  error

	expresion  goto 42
	cte  goto 43
	termino  goto 44
	factor  goto 45
	condicion  goto 86


state 40
	rama_if : LLAVEINIC . bloque_ejecutable LLAVEFIN  (114)
	rama_if : LLAVEINIC . LLAVEFIN  (115)

	IF  shift 8
	PRINT  shift 9
	FOR  shift 11
	ID  shift 12
	IGUALUNICO  shift 13
	LLAVEFIN  shift 87
	.  error

	bloque_ejecutable  goto 88
	sentencia_ejec  goto 89
	asign_simple  goto 21
	asign_multiple  goto 22
	bloque_if  goto 23
	bloque_for  goto 24
	sentencia_print  goto 25
	llamada_funcion  goto 26
	var_ref  goto 28
	lista_vars  goto 29
	bloque_if_error  goto 30


state 41
	rama_if : sentencia_ejec . PUNTOYCOMA  (113)

	PUNTOYCOMA  shift 90
	.  error


state 42
	expresion : expresion . MAS termino  (64)
	expresion : expresion . MAS error  (65)
	expresion : expresion . MENOS termino  (67)
	expresion : expresion . MENOS error  (68)
	condicion : expresion . op_relacion expresion  (103)
	condicion : expresion . error expresion  (104)
	condicion : expresion . op_relacion error  (106)

	error  shift 91
	IGUAL  shift 70
	DISTINTO  shift 71
	MENORIGUAL  shift 72
	MAYORIGUAL  shift 73
	MAS  shift 92
	MENOS  shift 93
	MAYOR  shift 78
	MENOR  shift 79
	.  error

	op_relacion  goto 94


state 43
	factor : cte .  (79)

	.  reduce 79


state 44
	expresion : termino .  (63)
	termino : termino . MUL factor  (71)
	termino : termino . MUL error  (72)
	termino : termino . DIV factor  (74)
	termino : termino . DIV error  (75)

	MUL  shift 95
	DIV  shift 96
	$end  reduce 63
	error  reduce 63
	IF  reduce 63
	PRINT  reduce 63
	RETURN  reduce 63
	INT  reduce 63
	FOR  reduce 63
	ID  reduce 63
	FLECHA  reduce 63
	IGUAL  reduce 63
	DISTINTO  reduce 63
	MENORIGUAL  reduce 63
	MAYORIGUAL  reduce 63
	MAS  reduce 63
	MENOS  reduce 63
	IGUALUNICO  reduce 63
	MAYOR  reduce 63
	MENOR  reduce 63
	PUNTOYCOMA  reduce 63
	PARENTINIC  reduce 63
	PARENTFIN  reduce 63
	LLAVEINIC  reduce 63
	LLAVEFIN  reduce 63


state 45
	termino : factor .  (70)

	.  reduce 70


state 46
	bloque_if_error : IF condicion . PARENTFIN rama_if ENDIF  (89)
	bloque_if_error : IF condicion . rama_if ENDIF  (91)
	bloque_if_error : IF condicion . PARENTFIN rama_if ELSE rama_else ENDIF  (93)
	bloque_if_error : IF condicion . rama_if ELSE rama_else ENDIF  (95)

	IF  shift 8
	PRINT  shift 9
	FOR  shift 11
	ID  shift 12
	IGUALUNICO  shift 13
	PARENTFIN  shift 97
	LLAVEINIC  shift 40
	.  error

	sentencia_ejec  goto 41
	asign_simple  goto 21
	asign_multiple  goto 22
	bloque_if  goto 23
	bloque_for  goto 24
	sentencia_print  goto 25
	llamada_funcion  goto 26
	var_ref  goto 28
	lista_vars  goto 29
	rama_if  goto 98
	bloque_if_error  goto 30


state 47
	bloque_if_error : IF rama_if . ENDIF  (97)
	bloque_if_error : IF rama_if . ELSE rama_else ENDIF  (98)

	ELSE  shift 99
	ENDIF  shift 100
	.  error


state 48
	expresion : error . MAS termino  (66)
	expresion : error . MENOS termino  (69)
	termino : error . MUL factor  (73)
	termino : error . DIV factor  (76)

	MAS  shift 74
	MUL  shift 75
	DIV  shift 76
	MENOS  shift 77
	.  error


49: shift/reduce conflict (shift 101, reduce 77) on PARENTINIC
state 49
	factor : ID .  (77)
	factor : ID . restofunc  (78)

	PARENTINIC  shift 101
	$end  reduce 77
	error  reduce 77
	IF  reduce 77
	PRINT  reduce 77
	RETURN  reduce 77
	INT  reduce 77
	FOR  reduce 77
	ID  reduce 77
	FLECHA  reduce 77
	IGUAL  reduce 77
	DISTINTO  reduce 77
	MENORIGUAL  reduce 77
	MAYORIGUAL  reduce 77
	MAS  reduce 77
	MUL  reduce 77
	DIV  reduce 77
	MENOS  reduce 77
	IGUALUNICO  reduce 77
	MAYOR  reduce 77
	MENOR  reduce 77
	PUNTOYCOMA  reduce 77
	PARENTFIN  reduce 77
	LLAVEINIC  reduce 77
	LLAVEFIN  reduce 77

	restofunc  goto 82


state 50
	sentencia_print : PRINT PARENTINIC . expresion PARENTFIN  (132)
	sentencia_print : PRINT PARENTINIC . error PARENTFIN  (133)
	sentencia_print : PRINT PARENTINIC . expresion  (135)

	error  shift 102
	ID  shift 49
	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	.  error

	expresion  goto 103
	cte  goto 43
	termino  goto 44
	factor  goto 45


state 51
	expresion : expresion . MAS termino  (64)
	expresion : expresion . MAS error  (65)
	expresion : expresion . MENOS termino  (67)
	expresion : expresion . MENOS error  (68)
	sentencia_print : PRINT expresion . PARENTFIN  (134)

	MAS  shift 92
	MENOS  shift 93
	PARENTFIN  shift 104
	.  error


state 52
	bloque_for : FOR ID . FROM CTEINT TO CTEINT PARENTFIN rama_for  (120)
	bloque_for : FOR ID . FROM CTEINT TO CTEINT rama_for  (127)

	FROM  shift 105
	.  error


state 53
	bloque_for : FOR PARENTINIC . ID FROM CTEINT TO CTEINT PARENTFIN rama_for  (119)
	bloque_for : FOR PARENTINIC . FROM CTEINT TO CTEINT PARENTFIN rama_for  (121)
	bloque_for : FOR PARENTINIC . ID CTEINT TO CTEINT PARENTFIN rama_for  (122)
	bloque_for : FOR PARENTINIC . ID FROM TO CTEINT PARENTFIN rama_for  (123)
	bloque_for : FOR PARENTINIC . ID FROM CTEINT CTEINT PARENTFIN rama_for  (124)
	bloque_for : FOR PARENTINIC . ID FROM CTEINT TO PARENTFIN rama_for  (125)
	bloque_for : FOR PARENTINIC . ID FROM CTEINT TO CTEINT rama_for  (126)
	bloque_for : FOR PARENTINIC . ID FROM CTEINT TO CTEINT PARENTFIN error  (128)

	FROM  shift 106
	ID  shift 107
	.  error


state 54
	llamada_funcion : ID PARENTINIC . lista_params_reales PARENTFIN  (136)

	error  shift 48
	TRUNC  shift 108
	ID  shift 49
	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	PARENTINIC  shift 109
	.  error

	expresion  goto 110
	cte  goto 43
	termino  goto 44
	factor  goto 45
	lista_params_reales  goto 111
	param_real_map  goto 112
	parametro_real  goto 113
	lambda_expr  goto 114


state 55
	asign_multiple : IGUALUNICO lista_ctes .  (51)
	lista_ctes : lista_ctes . COMA cte  (54)
	lista_ctes : lista_ctes . COMA error  (55)
	lista_ctes : lista_ctes . cte  (56)

	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	COMA  shift 115
	$end  reduce 51
	IF  reduce 51
	PRINT  reduce 51
	RETURN  reduce 51
	INT  reduce 51
	FOR  reduce 51
	ID  reduce 51
	IGUALUNICO  reduce 51
	PUNTOYCOMA  reduce 51
	PARENTINIC  reduce 51
	LLAVEFIN  reduce 51

	cte  goto 116


state 56
	lista_ctes : cte .  (53)

	.  reduce 53


state 57
	sentencia : sentencia_ejec PUNTOYCOMA .  (15)

	.  reduce 15


state 58
	declaracion_con_asignacion : tipo error . ASIGN expresion PUNTOYCOMA  (34)

	ASIGN  shift 117
	.  error


state 59
	lista_ids : ID .  (27)
	declaracion_con_asignacion : tipo ID . ASIGN expresion PUNTOYCOMA  (30)
	declaracion_con_asignacion : tipo ID . ASIGN expresion  (31)
	declaracion_con_asignacion : tipo ID . ASIGN error PUNTOYCOMA  (32)
	declaracion_con_asignacion : tipo ID . error expresion PUNTOYCOMA  (33)
	declaracion_funcion : tipo ID . PARENTINIC lista_params_formales PARENTFIN LLAVEINIC bloque return_sent LLAVEFIN  (35)

	error  shift 118
	ASIGN  shift 119
	PARENTINIC  shift 120
	$end  reduce 27
	IF  reduce 27
	PRINT  reduce 27
	RETURN  reduce 27
	INT  reduce 27
	FOR  reduce 27
	ID  reduce 27
	IGUALUNICO  reduce 27
	COMA  reduce 27
	PUNTOYCOMA  reduce 27
	LLAVEFIN  reduce 27


state 60
	declaracion_variable : tipo PUNTOYCOMA .  (26)

	.  reduce 26


state 61
	declaracion_funcion_err : tipo PARENTINIC . lista_params_formales PARENTFIN LLAVEINIC bloque LLAVEFIN  (37)
	sem_pasaje_opt : .  (44)

	CV  shift 121
	INT  reduce 44
	ID  reduce 44

	lista_params_formales  goto 122
	param_formal  goto 123
	sem_pasaje_opt  goto 124


state 62
	declaracion_variable : tipo lista_ids . PUNTOYCOMA  (24)
	declaracion_variable : tipo lista_ids .  (25)
	lista_ids : lista_ids . COMA ID  (28)
	lista_ids : lista_ids . COMA error  (29)

	COMA  shift 125
	PUNTOYCOMA  shift 126
	$end  reduce 25
	IF  reduce 25
	PRINT  reduce 25
	RETURN  reduce 25
	INT  reduce 25
	FOR  reduce 25
	ID  reduce 25
	IGUALUNICO  reduce 25
	LLAVEFIN  reduce 25


state 63
	asign_simple : var_ref ASIGN . expresion  (49)

	error  shift 48
	ID  shift 49
	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	.  error

	expresion  goto 127
	cte  goto 43
	termino  goto 44
	factor  goto 45


state 64
	var_ref : var_ref PUNTO . ID  (62)

	ID  shift 128
	.  error


state 65
	var_ref : ID .  (61)

	.  reduce 61


state 66
	asign_multiple : lista_vars IGUALUNICO . lista_ctes  (50)
	asign_multiple : lista_vars IGUALUNICO . error  (52)

	error  shift 129
	CTEINT  shift 35
	CTEFLOAT  shift 36
	CTESTR  shift 37
	MENOS  shift 38
	.  error

	lista_ctes  goto 130
	cte  goto 56

